[gd_scene load_steps=3 format=3 uid="uid://b76n6wiicwswt"]

[ext_resource type="Script" path="res://assets/scripts/options_scripts/options_audio.gd" id="1_2y4i8"]
[ext_resource type="FontFile" uid="uid://cc76tqvboo1gv" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_j1c1b"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1096.0
offset_bottom = 864.0
script = ExtResource("1_2y4i8")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="audio_button(prosto budet)" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.146
anchor_top = 0.083
anchor_right = 0.146
anchor_bottom = 0.083
offset_left = -0.0160065
offset_top = 0.287994
offset_right = 159.984
offset_bottom = 48.288
focus_mode = 0
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 40
text = "Audio"
flat = true

[node name="graphics_button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.759
anchor_top = 0.083
anchor_right = 0.759
anchor_bottom = 0.083
offset_left = 0.135925
offset_top = 0.287994
offset_right = 192.136
offset_bottom = 48.288
focus_mode = 0
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 40
text = "Graphics"
flat = true

[node name="gamesettings_button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.292
anchor_top = 0.088
anchor_right = 1.292
anchor_bottom = 0.088
offset_left = -0.0321045
offset_top = -0.0320053
offset_right = 343.968
offset_bottom = 43.968
focus_mode = 0
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 40
text = "Game Settings"
flat = true

[node name="back_button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 1.111
anchor_right = 0.022
anchor_bottom = 1.111
offset_left = -0.112001
offset_top = 0.0959473
offset_right = 239.888
offset_bottom = 72.0959
focus_mode = 0
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 57
text = "Back"
flat = true

[node name="sound" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.088
anchor_top = 0.324
anchor_right = 0.088
anchor_bottom = 0.324
offset_left = -0.448006
offset_top = 0.0639954
offset_right = 137.552
offset_bottom = 39.064
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 40
text = "Volume"

[node name="HSlider" type="HSlider" parent="Control/sound"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.391
anchor_top = 0.41
anchor_right = 1.391
anchor_bottom = 0.41
offset_left = 0.0419922
offset_top = 0.00999928
offset_right = 400.042
offset_bottom = 16.01

[node name="sfx" type="Label" parent="Control"]
layout_mode = 0
offset_left = 96.0
offset_top = 384.0
offset_right = 165.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("1_j1c1b")
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="HSlider" type="HSlider" parent="Control/sfx"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.783
anchor_top = 0.205
anchor_right = 2.783
anchor_bottom = 0.205
offset_left = -0.0270233
offset_top = 0.00499964
offset_right = 399.973
offset_bottom = 16.005

[connection signal="pressed" from="Control/graphics_button" to="Control" method="_on_graphics_button_pressed"]
[connection signal="pressed" from="Control/back_button" to="Control" method="_on_back_button_pressed"]
